<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/a1"
              android:weightSum="1"
        >
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Seat"
            android:includeFontPadding="true"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_marginBottom="5sp"
            android:id="@+id/textView5" android:layout_gravity="center_horizontal"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_weight="0.04">


        <Button
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:text="@string/A1"
                android:textSize="20dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:id="@+id/A1"/>
        <Button
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:text="@string/A2"
                android:textSize="20dp"
                android:layout_marginRight="47dp"
                android:layout_weight="1"
                android:id="@+id/A2"/>

        <Button
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:text="@string/A3"
                android:textSize="20dp"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:id="@+id/A3"/>

        <Button
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:text="@string/A4"
                android:textSize="20dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:id="@+id/A4"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_weight="0.04">


        <Button
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:text="@string/B1"
                android:textSize="20dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:id="@+id/B1"/>
        <Button
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:text="@string/B2"
                android:textSize="20dp"
                android:layout_marginRight="47dp"
                android:layout_weight="1"
                android:id="@+id/B2"/>

        <Button
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:text="@string/B3"
                android:textSize="20dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:id="@+id/B3"/>

        <Button
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:text="@string/B4"
                android:textSize="20dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:id="@+id/B4"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_weight="0.04">


        <Button
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:text="@string/C1"
                android:textSize="20dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:id="@+id/C1"/>
        <Button
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:text="@string/C2"
                android:textSize="20dp"
                android:layout_marginRight="47dp"
                android:layout_weight="1"
                android:id="@+id/C2"/>

        <Button
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:text="@string/C3"
                android:textSize="20dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:id="@+id/C3"/>

        <Button
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:text="@string/C4"
                android:textSize="20dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:id="@+id/C4"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_weight="0.04">


        <Button
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:text="@string/D1"
                android:textSize="20dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:id="@+id/D1"/>
        <Button
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:text="@string/D2"
                android:textSize="20dp"
                android:layout_marginRight="47dp"
                android:layout_weight="1"
                android:id="@+id/D2"/>

        <Button
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:text="@string/D3"
                android:textSize="20dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:id="@+id/D3"/>

        <Button
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:text="@string/D4"
                android:textSize="20dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:id="@+id/D4"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_weight="0.04"
            android:layout_gravity="center_horizontal">

        <Button
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:text="@string/E1"
                android:textSize="20dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:id="@+id/E1"/>

        <Button
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:text="@string/E2"
                android:textSize="20dp"
                android:layout_marginRight="47dp"
                android:layout_weight="1"
                android:id="@+id/E2"/>

        <Button
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:text="@string/E3"
                android:textSize="20dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:id="@+id/E3"/>

        <Button
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:text="@string/E4"
                android:textSize="20dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:id="@+id/E4"/>
    </LinearLayout>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Second_button"
            android:includeFontPadding="true"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:id="@+id/seatbutton"
            android:layout_gravity="center_horizontal"/>

</LinearLayout>