<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1"
              android:background="@drawable/a4"
        >
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bus Name"
            android:includeFontPadding="true"
            android:gravity="center_vertical"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"/>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbarSize="20dp"
            android:entries="@array/bus_name"
            android:id="@+id/bus_spinner"/>
    <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/Route"
            android:includeFontPadding="true"
            android:gravity="center_vertical"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.06"/>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/route_name"
            android:id="@+id/route_spinner"
            android:layout_weight="0.11"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Travel_date"
            android:includeFontPadding="true"
            android:gravity="center_vertical"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/textView3"/>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbarSize="20dp"
            android:id="@+id/date_spinner"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Time"
            android:includeFontPadding="true"
            android:gravity="center_vertical"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/textView4"/>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbarSize="20dp"
            android:id="@+id/time_spinner"/>
    <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/First_button"
            android:includeFontPadding="true"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_marginTop="30dp"
            android:id="@+id/booking_button"
            android:layout_gravity="center_horizontal"/>

</LinearLayout>